@@ -25,3 +25,4 @@ haveuint128.h
 ent
 tags
 entities.h
+havepread.h
