@@ -1,5 +1,6 @@
 0.31:
   special case buffer_get_token with token length 1 through memccpy (almost 4x speedup)
+  test for pread and use it instead of lseek+read in cdb and io_mmapwritefile
 
 0.30:
   add compiletimeassert.h
